@@ -11,6 +11,8 @@ Server Fixes:
 --Added rocketEnable server setting, to ensure that rockets can only take off
   from bigserver2.
 
+--Fixed updateGate so that error message doesn't divulge content leader email.
+
 
 
 Version 416   2024-April-21
